Thu Oct 03 22:05 2013 CDT
    * lib/channel.js, lib/playlist.js: Fix 'next' bumping not properly
      telling clients that the old item was deleted

Wed Oct 02 22:25 2013 CDT
    * www/channel.html, www/assets/js/ui.js, www/assets/js/callbacks.js:
      Add a small toggle for the MOTD

Wed Oct 02 09:35 2013 CDT
    * lib/channel.js: Fix the use of the wrong variable when checking for
      maximum video length

Tue Oct 01 22:57 2013 CDT
    * lib/asyncqueue.js: Add a generalized queue class for queueing async
      functions to execute in order
    * lib/channel.js, lib/playlist.js: Clean up playlist addition/move/
      deletion.  Should fix #285.
    * lib/server.js: Fix announcement initialization to null
    * tests/naokosimulator2013.js: Add a simple bot that authenticates
      and vomits a giant list of videos into a channel
    * www/assets/js/callbacks.js, www/assets/js/util.js: Clean up
      playlist add/move/delete
    * www/assets/js/data.js: Update CL_VERSION which I always forget
      to do.
    * www/assets/js/ui.js: Small fix to comply with server changes

Sun Sep 29 21:30 2013 CDT
    * lib/get-info.js: Add an extra check to ytv2 to make sure embedding is
      allowed.  If not, send a queueFail.

Fri Sep 27 10:27 2013 CDT
    * lib/channel.js: Change the link regex, change the way 'affects links'
      works.  The default link filter will only transform a link of no
      previous filters transform it (and filters will only transform a link
      if 'affects links' is ticked).

Thu Sep 26 23:40 2013 CDT
    * lib/config.js: Add config keys for statistics interval & max age,
      alias purge interval & max age.
    * lib/bgtask.js: Update intervals to reflect new config keys

Thu Sep 26 23:33 2013 CDT
    * lib/stats.js: Remove this file, move the statistics tracking
      interval to the new bgtask.js
    * lib/bgtask.js: Generalize background tasks to this module.  Add
      tasks for statistics tracking and clearing old aliases.