@@ -1762,11 +1762,6 @@ Channel.prototype.move = function(data, user) {
             return;
 
         if (self.playlist.move(data.from, data.after)) {
-            var moveby = user && user.name ? user.name : null;
-            if (typeof data.moveby !== "undefined")
-                moveby = data.moveby;
-
-
             var fromit = self.playlist.items.find(data.from);
             var afterit = self.playlist.items.find(data.after);
             var aftertitle = (afterit && afterit.media)
@@ -1780,7 +1775,6 @@ Channel.prototype.move = function(data, user) {
             self.sendAll("moveVideo", {
                 from: data.from,
                 after: data.after,
-                moveby: moveby
             });
         }
 
